# LDU7icn

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
docs/specs/: task_breakdown.md
hardware/: README.md
models/: README.md
scripts/: download_models.sh  run_dev.sh  start_sitl.sh
src/computer_vision/: README.md
src/flight_controller/: README.md
src/integration/: README.md
src/voice_control/: README.md
