[project]
name = "ldu7icn"
version = "0.1.0"
description = "UAV Multimodal Control System — Voice (Whisper) + Vision (YOLO) + Real-time Flight Control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "LDU7icn Team" }
]
keywords = ["uav", "drone", "whisper", "yolo", "speech-recognition", "computer-vision", "mavlink"]

dependencies = [
    # AI / Speech
    "openai-whisper>=20231117",
    "openai>=1.30.0",

    # Computer Vision
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.3.0",

    # Deep Learning
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",

    # Flight Controller
    "pymavlink>=2.4.41",
    "dronekit>=2.9.2",

    # Backend / API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",

    # MQTT / Messaging
    "paho-mqtt>=2.1.0",

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "PyYAML>=6.0.1",

    # Audio
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ldu7icn = "ldu7icn.main:app"
ldu7icn-voice = "ldu7icn.voice_control.whisper_module.transcriber:main"
ldu7icn-vision = "ldu7icn.computer_vision.yolo_module.detector:main"
ldu7icn-api = "ldu7icn.integration.api_gateway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ldu7icn"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/ldu7icn --cov-report=term-missing"
